fix: z-index

--- a/pages/_app/global.scss
+++ b/pages/_app/global.scss
@@ -83,7 +83,6 @@ p {
 
 a:hover {
   opacity: 0.6;
-  z-index: -100 !important;
 }
 
 .markdown {
